	* libGIFTQuPerl/cc/Makefile.am
	HACK: add $(top_srcdir) to the path, to fix #includes of the form "directory/include/target.h", so that we can build gift in a directory other than ${srcdir}
	* libMRML/cc/Makefile.am
	use $(srcdir)/ to find libMRML-config.pre-cc.

2006-10-10    <risc@volumehost.com>

	* FeatureExtraction/gabor.c
	comment cleanups.
	stop handling memory zeroing.
	* FeatureExtraction/extract_block_features.c
	comment cleanups.
	handle zeroing memory for gabor_filter.
	allocate conv, conv2, and filtered_image in one sweep. also memset them at the same time.

2006-10-05    <risc@volumehost.com>

	* FeatureExtraction/gabor.c
	move a conditional outside of the inner loops, for iteration 2 and 4.

2006-09-20    <risc@volumehost.com>

	* FeatureExtraction/gabor.c
	replace t_y with k. remove t_y and i, no longer in use.

2006-09-20    <risc@volumehost.com>

	* FeatureExtraction/gabor.c
	use one more memset.
	reverse order of conv[] in memory.
	swap conv[]'s x and y axis, to use in-order memory accesses.

2006-09-19    <risc@volumehost.com>

	* FeatureExtraction/gabor.c
	move a conditional outside of the inner loops, for iteration 1 and 3.

2006-09-19    <risc@volumehost.com>

	* FeatureExtraction/gabor.c
	remove int32_t t_x, replace with uint32_t k. uint32_t is slightly faster, and simplifies the inner loops.

2006-09-15    <risc@volumehost.com>

	* FeatureExtraction/gabor.c
	dont use calloc for conv, instead declare, and clear with memset.
	change to C99 datatypes in gabor_filter().

2006-09-14    <David.Squire@infotech.monash.edu.au>
    * scripts/perl/gift-add-collection.pl
	Fixed a buglet in the last part of the help message, and added a
	'--hostname' option to make it easier to get the URLs right (no need
	to specify two prefixes if all you want is to avoid 'localhost').

2006-08-28    <risc@volumehost.com>

	* FeatureExtraction/extract_block_features.c
	handle gabor_ranges() better, fix gabor_ranges to 100000 instead of 10000